Make seek bar vertical

--- a/AndroidControl/app/src/main/res/values/strings.xml
+++ b/AndroidControl/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RobotControl</string>
+    <string name="signature">VincentZhang\'s Robot Controller</string>
 </resources>
