--- a/AndroidControl/app/src/main/res/values/strings.xml
+++ b/AndroidControl/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RobotControl</string>
     <string name="signature">VincentZhang\'s Robot Controller</string>
+    <string name="rightwheelspeedformat">Right Speed:%d</string>
+    <string name="leftwheelspeedformat">Left Speed:%d</string>
 </resources>
