--- a/AndroidControl/app/src/main/res/values/strings.xml
+++ b/AndroidControl/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="rightwheelspeedformat">Right Speed:%d</string>
     <string name="leftwheelspeedformat">Left Speed:%d</string>
     <string name="clampAngle">Clamp Angle</string>
+    <string name="platformAngle">Platform Angle</string>
 </resources>
